--- a/rp-portfolio/hosts.yml
+++ b/rp-portfolio/hosts.yml
@@ -3,4 +3,4 @@ all:
       production:
         ansible_user: kathurima
         ansible_python_interpreter: /usr/bin/python3
-        ansible_host: fugavets.duckdns.org
+        ansible_host: kathurimaportfolio.duckdns.org
