--- a/rp-portfolio/letsencrypt_playbook.yml
+++ b/rp-portfolio/letsencrypt_playbook.yml
@@ -16,6 +16,7 @@
         name: "{{ packages }}"
       vars:
         packages:
+          - remove certbot
           - python3-certbot-nginx
                     
     - name: Enable UFW
